cabal-version:      3.0
name:               hask-json
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Harshit Panthi
maintainer:         harshitpanthi2006@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Parser
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.2.0
                    , megaparsec
                    , json-ast
                    , unordered-containers
                    , text
                    , vector
    hs-source-dirs:   src
    default-language: GHC2024

test-suite hask-json-test
    import:           warnings
    default-language: GHC2024
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        hask-json,
        text
